--- a/to-do/to-do.html
+++ b/to-do/to-do.html
@@ -30,16 +30,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/expenses/expenses.html">Expense Tracker</a>
+                <a class="nav-link" href="expenses/expenses.html">Expense Tracker</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/to-do/to-do.html">To-Do</a>
+                <a class="nav-link" href="to-do/to-do.html">To-Do</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cards/cards.html">Cards</a>
+                <a class="nav-link" href="cards/cards.html">Cards</a>
               </li>
             </ul>
           </div>
