--- a/cards/cards.html
+++ b/cards/cards.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg light">
       <div class="container-fluid">
 
-          <a class="navbar-brand" href="/index.html">
+          <a class="navbar-brand" href="index.html">
             <span class="grey-color">&lt;</span>
             <span class="logo-name">Mahmoud Elbakry</span>
             <span class="grey-color">/></span>
@@ -34,16 +34,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/expenses/expenses.html">Expense Tracker</a>
+                <a class="nav-link" href="expenses/expenses.html">Expense Tracker</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/to-do/to-do.html">To-Do</a>
+                <a class="nav-link" href="to-do/to-do.html">To-Do</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cards/cards.html">Cards</a>
+                <a class="nav-link" href="cards/cards.html">Cards</a>
               </li>
             </ul>
           </div>
