--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
 
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="index.html">
               <span class="grey-color">&lt;</span>
               <span class="logo-name">Mahmoud Elbakry</span>
               <span class="grey-color">/></span>
